<resources>
    <string name="app_name">MovieCatalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="series">TV Series</string>
    <string name="favorite">Favorite</string>
    <string name="fav_movies">Favorite Movies</string>
    <string name="fav_series">Favorite TV Series</string>
    <string name="back">back</string>
    <string name="detail">Detail</string>
    <string name="splash_screen_subtitle">Millions of movies, TV shows and people to discover.</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="synopsis">Synopsis</string>
    <string name="image">image</string>
    <string name="dummy_popularity">9.0</string>
    <string name="dummy_year">2019 |</string>
    <string name="dummy_title">Alita The Adventure</string>
    <string name="watch_now">Watch Now</string>
    <string name="logo">logo</string>
    <string name="no_internet_connection">No Internet Connection</string>
</resources>